# c-opengl

./: .ccls  CMakeLists.txt
include/: glad.h
src/: color.c  color.h  glad.c  indexBuffer.c  indexBuffer.h  main.c  render2D.c  render2D.h  shader.c  shader.h  texture.c  texture.h  vertexArray.c  vertexArray.h  vertexBuffer.c  vertexBuffer.h  vertexBufferLayout.c  vertexBufferLayout.h  window.c  window.h
src/shaders/: default.frag  default.vert  image.frag  image.vert
